# clanker-and-the-dev

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  _config.yml  dev.sh  index.html  job.sh  package.json
.agents/add-new-comic/: SKILL.md
.agents/skills/add-new-comic/: SKILL.md  pyproject.toml  requirements.txt
.agents/skills/add-new-comic/scripts/: composite_panel.py  generate_comic.py  generate_panel.py  generate_panel_worker.py  models.py
_includes/: head.html
_layouts/: default.html  post.html
_posts/: 2023-10-27-welcome.md  2026-06-08-the-cycle-of-ai-coding-burnout.md  2026-06-08-the-dumb-zone.md  2026-06-08-the-refactor.md  2026-06-09-limb-budget.md
assets/comics/limb-budget/: generation.json
assets/comics/the-cycle-of-ai-coding-burnout/: generation.json
assets/comics/the-dumb-zone/: generation.json
assets/comics/the-refactor/: generation.json
assets/css/: main.scss
comic/: chat-to-spec.js  render-comic.js  schema.md  sdxl-generation-plan.md  style-guide.md
comic/done/: the-cycle-of-ai-coding-burnout.md  the-dumb-zone.md
comic/specs/: limb-budget.json  the-cycle-of-ai-coding-burnout.json  the-dumb-zone.json  the-refactor.json
posts/: welcome.md
src/: server.js
